# freebsddistro

./: README.md  links.text
implementation/: .workspace (copy)
implementation/_builder_/: Makefile  builder-release.sh  builder.pro  builder.sh  common-options.pro
implementation/applications/Architector/: Architector.cpp  Architector.h  Architector.pro  Architecture.Renderer.IAbstractClassRenderer.h  Architecture.Renderer.IArrowDoubleRenderer.h  Architecture.Renderer.IArrowRenderer.h  Architecture.Renderer.IClassRenderer.h  Architecture.Renderer.IInterfaceRenderer.h  Architecture.Renderer.IPropertiesRenderer.h  Architecture.Renderer.IRendererFactory.h  Architecture.Renderer.ITextRenderer.h  Architecture.Shapes.AbstractClass.cpp  Architecture.Shapes.AbstractClass.h  Architecture.Shapes.AbstractShape.cpp  Architecture.Shapes.AbstractShape.h  Architecture.Shapes.Arrow.cpp  Architecture.Shapes.Arrow.h  Architecture.Shapes.ArrowDouble.cpp  Architecture.Shapes.ArrowDouble.h  Architecture.Shapes.Class.cpp  Architecture.Shapes.Class.h  Architecture.Shapes.IShape.h  Architecture.Shapes.Interface.cpp  Architecture.Shapes.Interface.h  Architecture.Shapes.Properties.cpp  Architecture.Shapes.Properties.h  Architecture.Shapes.Text.cpp  Architecture.Shapes.Text.h  Architecture.Shapes.cpp  Architecture.Shapes.h  Architecture.Ui.cpp  Architecture.Ui.h  SampleAechitecture.architector  main.cpp
implementation/applications/ArchitectorPluginsClassicUmlRenderer/: Architecture.Renderer.ClassicUmlRenderer.cpp  Architecture.Renderer.ClassicUmlRenderer.h
implementation/applications/ArchitectorPluginsThreeDRenderer/: Architecture.Renderer.ThreeDRenderer.cpp  Architecture.Renderer.ThreeDRenderer.h
implementation/applications/Architecture.Renderer.2DRenderer/: Architecture.Renderer.2DRenderer.pro  Architecture.Renderer.AbstractClassRenderer.cpp  Architecture.Renderer.AbstractClassRenderer.h  Architecture.Renderer.ArrowDoubleRenderer.cpp  Architecture.Renderer.ArrowDoubleRenderer.h  Architecture.Renderer.ArrowRenderer.cpp  Architecture.Renderer.ArrowRenderer.h  Architecture.Renderer.ClassRenderer.cpp  Architecture.Renderer.ClassRenderer.h  Architecture.Renderer.InterfaceRenderer.cpp  Architecture.Renderer.InterfaceRenderer.h  Architecture.Renderer.PropertiesRenderer.cpp  Architecture.Renderer.PropertiesRenderer.h  Architecture.Renderer.RendererFactory.cpp  Architecture.Renderer.RendererFactory.h  Architecture.Renderer.RendererGraphicsScene.cpp  Architecture.Renderer.RendererGraphicsScene.h  Architecture.Renderer.RendererGraphicsView.cpp  Architecture.Renderer.RendererGraphicsView.h  Architecture.Renderer.TextRenderer.cpp  Architecture.Renderer.TextRenderer.h
implementation/applications/Commander/: Commander.cpp  Commander.h  Commander.pro  main.cpp
implementation/applications/CommunicationCenter/: CommunicationCenter.cpp  CommunicationCenter.h  CommunicationCenter.pro  main.cpp
implementation/applications/Console/: Console.cpp  Console.h  Console.pro  main.cpp
implementation/applications/Developer/: Developer.cpp  Developer.h  Developer.pro  main.cpp
implementation/applications/Downloader/: downloader.pro  main.cpp  supportedtypes.h
implementation/applications/FileExplorer/: filemanager.pro  main.cpp
implementation/applications/MediaPlayer/: main.cpp  mediaplayer.pro
implementation/applications/Mixer/: main.cpp  mixer.pro
implementation/applications/OpticMediaRecorder/: cd-dvd-authoring.pro  main.cpp
implementation/applications/PictureViewer/: .cdtproject  .project  PictureViewer.cpp  PictureViewer.h  PictureViewer.pro  main.cpp
implementation/applications/SchemaDrawer/: SchemaDrawer.cpp  SchemaDrawer.h  SchemaDrawer.pro  main.cpp
implementation/applications/ScreenRecorder/: ScreenRecorder.cpp  ScreenRecorder.h  (+4 more)
implementation/applications/WindowManager/bak/old_ideas/trash/phluid-0.0.3/phluid-0.0.3/: COPYING  INSTALL  README  configure.in  mkinstalldirs
implementation/applications/WindowManager/bak/old_ideas/trash/phluid-0.0.3/phluid-0.0.3/src/: client.c  debug.c  decal.c  event_handlers.c  icccm.c  phluid.c  phluid.h
implementation/server/: .workspace
research-docs/: index.html  index_top.html
research-docs/docs/: examples.html  index.html
research-docs/old_docs/: critica  intro.html
(+1800 files in other folders)
