dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/phluid.c)

AM_INIT_AUTOMAKE(phluid, 0.0.3)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.
dnl Replace `main' with a function in -libs:
AC_CHECK_HEADER(Imlib2.h)
AC_CHECK_LIB(Imlib2, imlib_context_set_image)

dnl Checks for header files.
AC_PATH_X
AC_HEADER_STDC

IMLIB2_CONFIG="imlib2-config"

AC_ARG_WITH(imlib2,
        [  --with-imlib2=DIR       use DIR where imlib2 was installed (eg /usr/local)],
        [LDFLAGS="$LDFLAGS -L$withval/lib"
         IMLIB2_CONFIG=$withval"/bin/imlib2-config"])

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_TYPE_SIGNAL

dnl Use -Wall if we have gcc.
changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \╗]-Wall[\ \╗иииии]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

dnl Set PACKAGE_DATA_DIR in config.h.
if test "x${datadir}" = 'x${prefix}/share'; then
  if test "x${prefix}" = "xNONE"; then
    AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${ac_default_prefix}/share/${PACKAGE}")
  else
    AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${prefix}/share/${PACKAGE}")
  fi
else
  AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${datadir}/${PACKAGE}")
fi

AC_OUTPUT(Makefile src/Makefile)
